--- a/package.json
+++ b/package.json
@@ -1,41 +1,39 @@
 {
   "name": "nuesa-biu-api",
   "version": "1.0.0",
-  "description": "NUESA BIU Student Association API",
+  "description": "NUESA BIU API Server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "lint": "eslint .",
+    "db:init": "node database/init.js",
+    "db:migrate": "node database/migrate.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "helmet": "^7.0.0",
     "bcryptjs": "^2.4.3",
-    "compression": "^1.8.1",
-    "cors": "^2.8.6",
-    "dotenv": "^16.6.1",
-    "express": "^4.22.1",
-    "express-rate-limit": "^6.11.2",
-    "express-validator": "^7.3.1",
-    "helmet": "^7.2.0",
-    "hpp": "^0.2.3",
-    "jsonwebtoken": "^9.0.3",
-    "morgan": "^1.10.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^4.2.1",
-    "nodemailer": "^7.0.12",
-    "pg": "^8.17.2",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "winston": "^3.19.0",
-    "xss-clean": "^0.1.4"
+    "@supabase/supabase-js": "^2.38.4",
+    "pg": "^8.11.3",
+    "express-validator": "^7.0.1",
+    "express-rate-limit": "^6.10.0",
+    "compression": "^1.7.4",
+    "winston": "^3.10.0",
+    "xss-clean": "^0.1.4",
+    "hpp": "^0.2.3",
+    "morgan": "^1.10.0",
+    "express-timeout-handler": "^2.2.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+    "nodemon": "^3.0.1",
+    "eslint": "^8.50.0",
+    "jest": "^29.7.0"
+  }
 }
