--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "express-timeout-handler": "^2.2.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "express-timeout": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
