--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "xss-clean": "^0.1.4",
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
-    "express-timeout-handler": "^2.2.3",
+    "connect-timeout": "^1.9.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
