--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'Building API dependencies' && npm install",
     "test": "jest",
     "lint": "eslint .",
     "db:init": "node database/init.js",
