--- a/package.json
+++ b/package.json
@@ -13,28 +13,29 @@
     "db:migrate": "node database/migrate.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
     "@supabase/supabase-js": "^2.38.4",
-    "pg": "^8.11.3",
-    "express-validator": "^7.0.1",
-    "express-rate-limit": "^6.10.0",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
-    "winston": "^3.10.0",
-    "xss-clean": "^0.1.4",
-    "hpp": "^0.2.3",
-    "morgan": "^1.10.0",
     "connect-timeout": "^1.9.0",
-    "uuid": "^9.0.0"
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "uuid": "^9.0.0",
+    "winston": "^3.10.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "eslint": "^8.50.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1"
   }
 }
