--- a/vercel.json
+++ b/vercel.json
@@ -5,10 +5,6 @@
       "destination": "https://nuesa-biu-pjp0.onrender.com/api/:path*"
     },
     {
-      "source": "/portal/:path*",
-      "destination": "https://nuesa-biu-pjp0.onrender.com/portal/:path*"
-    },
-    {
       "source": "/admin/:path*",
       "destination": "https://nuesa-biu-pjp0.onrender.com/admin/:path*"
     },
@@ -27,5 +23,6 @@
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" }
       ]
     }
-  ]
+  ],
+  "cleanUrls": true
 }
